Updated Android Code.